Добавил возможность скачивания и поворота изображения

--- a/website/index.html
+++ b/website/index.html
@@ -527,7 +527,6 @@ buildtool: false
           <div class="pswp__ui pswp__ui--hidden">
 
             <div class="pswp__top-bar">
-
 				<div class="pswp__counter"></div>
 
 				<button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
@@ -537,6 +536,11 @@ buildtool: false
 				<button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
 
 				<button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+
+				<button class="pswp__button pswp__button--rotate" title="Rotate"></button>
+
+				<a href="#" class="pswp__button pswp__button--download" target="_blank" title="Download"></a>
+
 
 				<div class="pswp__preloader">
 					<div class="pswp__preloader__icn">
