Добавил вращение в обе стороны

--- a/website/index.html
+++ b/website/index.html
@@ -538,6 +538,7 @@ buildtool: false
 				<button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
 
 				<button class="pswp__button pswp__button--rotate" title="Rotate"></button>
+				<button class="pswp__button pswp__button--rotate pswp__button--rotate-prev" title="Rotate"></button>
 
 				<a href="#" class="pswp__button pswp__button--download" target="_blank" title="Download"></a>
 
